Playing Around with Concepts

--- a/index.html
+++ b/index.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets/css/normalize.css">
+    <link rel="stylesheet" href="./Assets/css/skeleton.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
     <title>Group Project</title>
 </head>
 <body>
+    <header>
+        <h1 class="banner">Our Awesome Music App</h1>
+    </header>
+
+    <div class="container">
+        <div class="row">
+            <div id="profile-container" class="three columns">
+                <img src="https://via.placeholder.com/150" alt="Placeholder">
+                <div>Input Info (Spotify?)</div>
+                <div>Input Info (iTunes?)</div>
+                <div>Input Info (Wikipedia?)</div>
+                <div>Input Info (Instagram?)</div>
+                <div>Input Info (Twitter?)</div>
+                <form>
+                    <label for="band-search">Search Below</label>
+                    <input class="u-full-width" type="" placeholder="Find a Band" id="band-search">
+                    <input class="button-primary" type="submit" value="Let's Jam">
+                </form>
+            </div>
+                <div id="content-container" class="eight columns">
+                    <img src="https://via.placeholder.com/625x60/000000/FFFFFF/?text=Music+Banner+Population" alt="music-content">
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                    <div>Fill Container</div>
+                </div>
+            <div>
+
+            </div>
+        </div>
+
+        </div>
+
+    </div>
     
 </body>
 </html>
