giphy works with search

--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
         <div class="row">
             <div id="profile-container" class="three columns">
                 <img src="https://via.placeholder.com/150" alt="Placeholder">
-                <div>Input Info (Spotify?)</div>
+                <div class="SpotifyData" id="response-container">Input Info (Spotify?)</div>
+                <!-- <button class="btn button"></button> -->
                 <div>Input Info (iTunes?)</div>
                 <div>Input Info (Wikipedia?)</div>
                 <div>Input Info (Instagram?)</div>
                 <div>Input Info (Twitter?)</div>
-                <form>
+                <!-- <form> -->
                     <label for="band-search">Search Below</label>
                     <input class="u-full-width" type="" placeholder="Find a Band" id="band-search">
-                    <input class="button-primary" type="submit" value="Let's Jam">
-                </form>
+                    <input class="button-primary" onclick="giphyFunction()" type="submit" value="Let's Jam">
+                <!-- </form> -->
             </div>
                 <div id="content-container" class="eight columns">
                     <img src="https://via.placeholder.com/625x60/000000/FFFFFF/?text=Music+Banner+Population" alt="music-content">
@@ -55,7 +56,8 @@
         </div>
 
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>  -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <script src="Assets/script.js"></script>
 </body>
 </html>
