trying to merge

--- a/Assets/index1.html
+++ b/Assets/index1.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     
-    <div class="container">        
+    <div class="container">  
+        <h3>Search for a playlist to match your mood</h3>      
         <form action="">
             <input type="hidden" id='hidden_token'>
             <div class="col-sm-6 form-group row mt-4 px-0">
@@ -19,7 +20,7 @@
                 </select>
             </div>
             <div class="col-sm-6 form-group row px-0">
-                <label for="Genre" class="form-label col-sm-2">Playlists:</label>
+                <label for="Genre" class="form-label col-sm-2">Playlists: </label>
                 <select name="" id="select_playlist" class="form-control form-control-sm col-sm-10">
                     <option>Select...</option>                    
                 </select>
