playing with the bones

--- a/Assets/index1.html
+++ b/Assets/index1.html
@@ -15,8 +15,8 @@
         <h3>Genre Mamba</h3>      
         <form action="">
             <input type="hidden" id='hidden_token'>
-            <div class="three columns">
-                <label for="Genre" class="u-full-width">Genre:</label>
+            <div id="left-column" class="three columns">
+                <label for="Genre" class="">Genre:</label>
                 <select name="" id="select_genre" class="form-control form-control-sm col-sm-10">
                     <option>What are you vibin'?</option>                    
                 </select>
@@ -29,7 +29,7 @@
         </form>
             <div class="three columns" id="song-detail">            
             </div>
-            <table class="four columns">
+            <table id="songs" class="four columns">
                 <thread>
                 <tr>
                     <th>Songs</th>
