--- a/Assets/index1.html
+++ b/Assets/index1.html
@@ -39,9 +39,37 @@
             </div>
         </div>   
     </div>
+    <div class="instagram-feed" id="instagram-feed-demo">
+        <h3>Search Instagram Feed</h3>
+        <form id="instagramForm" autocomplete="off">
+            <input type="text" id="username" placeholder="Enter Username">
+            <input type="search" value="Search">
+        </form>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="app.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="jquery.instagramFeed.js"></script>
+   
+    <script src="instagram.js"></script>
+    <script>
+        $(document).ready(function() {
+            $("#instagramForm").submit(function(e){
+                e.preventDefault()
+
+                var username = $("#username").val()
+
+                $.instagramFeed({
+                    'username' :username,
+                    'display_biography': true,
+                    'display-igtv' :true,
+                    'items' :25,
+                    'container' :"#instagram-feed-demo"
+                })
+            })
+        })
+    </script>
 </body>
 </html>
