--- a/Assets/index1.html
+++ b/Assets/index1.html
@@ -40,6 +40,11 @@
                 </thread>                                             
             </table>
     </div>  
+    <footer>
+        <button id="light-mode-toggle" class="button-primary"
+        type="button">Toggle Boggle</button>
+    </footer>
     <script src="app.js" type="text/javascript"></script>
+    <script src="lightmode.js" type="text/javascript"></script>
 </body>
 </html>
