--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./Assets/css/style.css">
     <title>Group Project</title>
 </head>
+
 <body>
     <header>
         <h1 class="banner">Our Awesome Music App</h1>
@@ -25,39 +26,41 @@
                 <div>Input Info (Instagram?)</div>
                 <div>Input Info (Twitter?)</div>
                 <!-- <form> -->
-                    <label for="band-search">Search Below</label>
-                    <input class="u-full-width" type="" placeholder="Find a Band" id="band-search">
-                    <input class="button-primary" onclick="giphyFunction()" type="submit" value="Let's Jam">
+                <label for="band-search">Search Below</label>
+                <input class="u-full-width" type="" placeholder="Find a Band" id="band-search">
+                <input class="button-primary" onclick="giphyFunction()" type="submit" value="Let's Jam">
                 <!-- </form> -->
             </div>
-                <div id="content-container" class="eight columns">
-                    <img src="https://via.placeholder.com/625x60/000000/FFFFFF/?text=Music+Banner+Population" alt="music-content">
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                    <div>Fill Container</div>
-                </div>
+            <div id="content-container" class="eight columns">
+                <img src="https://via.placeholder.com/625x60/000000/FFFFFF/?text=Music+Banner+Population" alt="music-content">
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+                <div>Fill Container</div>
+            </div>
             <div>
 
             </div>
         </div>
 
-        </div>
+    </div>
 
     </div>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>  -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <script src="./Assets/musixmatch.js"></script>
     <script src="Assets/script.js"></script>
 </body>
+
 </html>
