--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="https://via.placeholder.com/150" alt="Placeholder">
                 <div class="SpotifyData" id="response-container">Input Info (Spotify?)</div>
                 <!-- <button class="btn button"></button> -->
-                <div>Input Info (iTunes?)</div>
+                <div>Input Info (Youtube?)</div>
                 <div>Input Info (Wikipedia?)</div>
                 <div>Input Info (Instagram?)</div>
                 <div>Input Info (Twitter?)</div>
@@ -32,7 +32,10 @@
             </div>
                 <div id="content-container" class="eight columns">
                     <img src="https://via.placeholder.com/625x60/000000/FFFFFF/?text=Music+Banner+Population" alt="music-content">
-                    <div>Fill Container</div>
+                    <div>        <h1 class="title">Youtube API</h1>
+                        <p>Search for an Artist:<input id="artist"/></p>
+                        <button id="search" class="btn">Go</button>
+                        <div id="output"></div></div>
                     <div>Fill Container</div>
                     <div>Fill Container</div>
                     <div>Fill Container</div>
@@ -59,5 +62,7 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>  -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
     <script src="Assets/script.js"></script>
+    <script src="script.js"></script> 
+
 </body>
 </html>
