adding back in gifs and trying to improve functionality

--- a/Assets/index-beta.html
+++ b/Assets/index-beta.html
@@ -21,6 +21,10 @@
     <div id="random-response-author" class="randomAuthorHere"></div>
     <div>
         <p></p>
+    </div>Search term: <input type="text" id="searchTerm" value=""/>
+    <div>
+        <button class="btn" id="btn" type="input" value="text" onclick="myFunction()">Search!</button>
+        <div id="search-container" class="searchHere">Searched Quote: </div>
     </div>
     </header>
     <div id="profile" class="row">
