gif and quote search working with the same button input

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <!-- <form> -->
                 <label for="band-search">Search Below</label>
                 <input class="u-full-width" type="" placeholder="Find a Band" id="band-search">
-                <input class="button-primary" id="band-search" onclick="giphyFunction()" type="submit" value="Let's Jam">
+                <input class="button-primary btn" id="band-search" onclick="giphyFunction(), myFunction()" type="submit"
+                    value="Let's Jam">
                 <!-- </form> -->
             </div>
             <div id="content-container" class="eight columns">
@@ -48,25 +49,24 @@
                 <div>Fill Container</div>
                 <div>Fill Container</div>
                 <div>Fill Container</div>
-                <div>Quote section
+                <div>Quote section</div>
+                <div>
                     <!-- random quote generator -->
                     <button class="random-btn" id="random-btn" type="input" value="text"
                         onclick="myRandomFunction()">Click for Random
-                        Quote!</button>
+                        Quote:</button>
                     <div id="random-response-container" class="randomquoteHere"></div>
                     <div id="random-response-author" class="randomAuthorHere"></div>
-                    <div>
+                    <!-- <div>
                         <p></p>
-                    </div>Search term: <input type="text" id="searchTerm" value="" />
+                    </div> -->
+                    <!-- Search term: <input type="text" id="searchTerm" value="" /> -->
                     <div>
-                        <button class="btn" id="btn" type="input" value="text" onclick="myFunction()">Search!</button>
-                        <div id="search-container" class="searchHere">Searched Quote: </div>
+                        <!-- <button class="btn" id="btn" type="input" value="text" onclick="myFunction()"></button> -->
+                        <!-- <div id="search-container" class="searchHere">Searched Quote: </div> -->
                     </div>
-                    
-                </div>
-            </div>
-            <div>
 
+                </div>
             </div>
         </div>
 
