--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             </div>
             <div>
 
+                <div id="lyrics"></div>
+
             </div>
         </div>
 
@@ -58,7 +60,7 @@
 
     </div>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>  -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./Assets/musixmatch.js"></script>
     <script src="Assets/script.js"></script>
 </body>
