--- a/index-beta.html
+++ b/index-beta.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genre Mamba</title>
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/skeleton.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" href="./Assets/css/normalize.css">
+    <link rel="stylesheet" href="./Assets/css/skeleton.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
 </head>
 
 <body>
@@ -54,7 +53,7 @@
             </div>
         </div>
     </div>
-    <script src="randomQuoteGen.js"></script>
+    <script src="./Assets/js/randomQuoteGen.js"></script>
 </body>
 
 </html>
