--- a/spotify.html
+++ b/spotify.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genre Mamba</title>
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/skeleton.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" href="./Assets/css/normalize.css">
+    <link rel="stylesheet" href="./Assets/css/skeleton.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
+    <link rel="stylesheet" href="./Assets/css/style1.css">
 </head>
 <body>
     <header>
@@ -47,7 +47,7 @@
         <button id="light-mode-toggle" class="button-primary"
         type="button">Toggle Boggle</button>
     </footer>
-    <script src="app.js" type="text/javascript"></script>
-    <script src="lightmode.js" type="text/javascript"></script>
+    <script src="./Assets/js/app.js" type="text/javascript"></script>
+    <script src="./Assets/js/lightmode.js" type="text/javascript"></script>
 </body>
 </html>
