--- a/index.html
+++ b/index.html
@@ -4,79 +4,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Genre Mamba</title>
     <link rel="stylesheet" href="./Assets/css/normalize.css">
     <link rel="stylesheet" href="./Assets/css/skeleton.css">
     <link rel="stylesheet" href="./Assets/css/style.css">
-    <title>Group Project</title>
 </head>
 
 <body>
     <header>
-        <h1 class="banner">Our Awesome Music App</h1>
+        <h3>BOOMTOWN</h3>
+        <!-- random quote generator -->
+    <button class="random-btn" id="random-btn" type="input" value="text" onclick="myRandomFunction()">Click for Random
+        Quote!</button>
+    <div id="random-response-container" class="randomquoteHere"></div>
+    <div id="random-response-author" class="randomAuthorHere"></div>
+    <div>
+        <p></p>
+    </div>Search term: <input type="text" id="searchTerm" value=""/>
+    <div>
+        <button class="btn" id="btn" type="input" value="text" onclick="myFunction()">Search!</button>
+        <div id="search-container" class="searchHere">Searched Quote: </div>
+    </div>
     </header>
-
-    <div class="container">
-        <div class="row">
-            <div id="profile-container" class="three columns">
-                <img src="https://via.placeholder.com/150" alt="Placeholder">
-                <div class="SpotifyData" id="response-container">Input Info (Spotify?)</div>
-                <!-- <button class="btn button"></button> -->
-                <div>Input Info (iTunes?)</div>
-                <div>Input Info (Wikipedia?)</div>
-                <div>Input Info (Instagram?)</div>
-                <div>Input Info (Twitter?)</div>
-                <!-- <form> -->
-                <label for="band-search">Search Below</label>
-                <input class="u-full-width" type="" placeholder="Find a Band" id="band-search">
-                <input class="button-primary btn" id="band-search" onclick="giphyFunction(), myFunction()" type="submit"
-                    value="Let's Jam">
-                <!-- </form> -->
+    <div id="profile" class="row">
+        <form>
+            <div id="left-column" class="two columns">
+                <label for="Genre" class="">Find your Topic:</label>
+                <input class="u-full-width" type="text" placeholder="Text, Please" id="search-content">
+                <button type="submit" id="btn_search" class="">Search</button>
             </div>
-            <div id="content-container" class="eight columns">
-                <img src="https://via.placeholder.com/625x60/000000/FFFFFF/?text=Music+Banner+Population"
-                    alt="music-content">
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Fill Container</div>
-                <div>Quote section</div>
+        </form>
+        <div class="row">
+            <div id="youtube-container" class="eight columns">
                 <div>
-                    <!-- random quote generator -->
-                    <button class="random-btn" id="random-btn" type="input" value="text"
-                        onclick="myRandomFunction()">Click for Random
-                        Quote:</button>
-                    <div id="random-response-container" class="randomquoteHere"></div>
-                    <div id="random-response-author" class="randomAuthorHere"></div>
-                    <!-- <div>
-                        <p></p>
-                    </div> -->
-                    <!-- Search term: <input type="text" id="searchTerm" value="" /> -->
-                    <div>
-                        <!-- <button class="btn" id="btn" type="input" value="text" onclick="myFunction()"></button> -->
-                        <!-- <div id="search-container" class="searchHere">Searched Quote: </div> -->
-                    </div>
-
+                    <iframe id="if1" width="360" height="200" src="https://www.youtube.com/embed/q7JDYiLz9Mo"
+                        frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe id="if2" width="360" height="200" src="https://www.youtube.com/embed/GRxofEmo3HA"
+                        frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe id="if3" width="360" height="200" src="https://www.youtube.com/embed/arj7oStGLkU"
+                        frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe id="if4" width="360" height="200" src="https://www.youtube.com/embed/6DVbt5W-DNc"
+                        frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </div>
-
     </div>
-
-    </div>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>  -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
-    <script src="Assets/script.js"></script>
-    <script src="Assets/randomQuoteGen.js"></script>
+    <script src="./Assets/js/randomQuoteGen.js"></script>
 </body>
 
 </html>
