--- a/index-test.html
+++ b/index-test.html
@@ -73,10 +73,10 @@
     </div>
 
     </div>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>  -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
-    <script src="Assets/script.js"></script>
-    <script src="Assets/randomQuoteGen.js"></script>
+    <script src="Assets/js/script.js"></script>
+    <script src="Assets/js/randomQuoteGen.js"></script>
 </body>
 
 </html>
