--- a/index.html
+++ b/index.html
@@ -33,8 +33,23 @@
                 <div id="content-container" class="eight columns">
                     <img src="https://via.placeholder.com/625x60/000000/FFFFFF/?text=Music+Banner+Population" alt="music-content">
                     <div>        <h1 class="title">Youtube API</h1>
-                        <p>Search for an Artist:<input id="artist"/></p>
-                        <button id="search" class="btn">Go</button>
+                        <form id="yt-form">
+                            <p><input type="text" id="keyword-input" placeholder="Enter keyword" required></p>
+                            <p><input type="number" id="maxresult-input" placeholder="Max Results" min="1" max="10" required></p>
+                            <p>
+                                <select id="order-input" required>
+                                    <option value="">--SELECT--</option>
+                                    <option value="date">Date</option>
+                                    <option value="rating">Rating</option>
+                                    <option value="title">Title</option>
+                                </select>
+                            </p>
+                            <p>
+                                <input type="submit" value="Submit">
+                            </p>
+                        </form>
+                     
+                        <div id="videoListContainer"></div>
                         <div id="output"></div></div>
                     <div>Fill Container</div>
                     <div>Fill Container</div>
@@ -61,8 +76,15 @@
     </div>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>  -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
-    <script src="Assets/script.js"></script>
+    <!-- <script src="Assets/script.js"></script> -->
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
     <script src="script.js"></script> 
+
 
 </body>
 </html>
