youtube api js updated

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -45,7 +44,7 @@
                                 </select>
                             </p>
                             <p>
-                                <input type="submit" value="Submit">
+                                <button id="search">search</button>
                             </p>
                         </form>
                      
