--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- DIV ID RESPONSE CONTAINER HOLDS GIF -->
         <!-- random quote generator -->
         <button class="random-btn button-primary top-left" id="random-btn" type="input" value="text"
-        onclick="myRandomFunction()">Randomize</button>
+        onclick="myRandomFunction()">Boggle</button>
         <div id="random-response-container" class="randomquoteHere"></div>
         <div id="random-response-author" class="randomAuthorHere"></div>
     </header>
